outputs_20260331-062313-b0be7ec0/codegen/production/build_logs/compiler_stderr.log
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\src\gtm_tom_3_phase_inverter_pwm.c:21:10: fatal error: IfxGtm_PinMap.h: No such file or directory
   21 | #include "IfxGtm_PinMap.h"
      |          ^~~~~~~~~~~~~~~~~
compilation terminated.

In file included from C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity.h:22,
                 from C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:1:
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G4_001_init_does_not_install_isr':
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:136:41: error: implicit declaration of function 'mock_IfxCpu_Irq_installInterruptHandler_getCallCount' [-Wimplicit-function-declaration]
  136 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxCpu_Irq_installInterruptHandler_getCallCount(), "init() must not install any ISR handlers");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:136:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  136 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxCpu_Irq_installInterruptHandler_getCallCount(), "init() must not install any ISR handlers");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G4_002_init_does_not_start_or_stop_channel_outputs':
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:148:41: error: implicit declaration of function 'mock_IfxGtm_Pwm_startSyncedChannels_getCallCount'; did you mean 'mock_IfxGtm_Pwm_getChannelState_getCallCount'? [-Wimplicit-function-declaration]
  148 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Pwm_startSyncedChannels_getCallCount(), "init() must not call startSyncedChannels()");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:148:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  148 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Pwm_startSyncedChannels_getCallCount(), "init() must not call startSyncedChannels()");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:149:41: error: implicit declaration of function 'mock_IfxGtm_Pwm_stopSyncedChannels_getCallCount'; did you mean 'mock_IfxGtm_Pwm_getChannelState_getCallCount'? [-Wimplicit-function-declaration]
  149 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Pwm_stopSyncedChannels_getCallCount(), "init() must not call stopSyncedChannels()");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:149:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  149 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Pwm_stopSyncedChannels_getCallCount(), "init() must not call stopSyncedChannels()");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:150:41: error: implicit declaration of function 'mock_IfxGtm_Pwm_startChannelOutputs_getCallCount'; did you mean 'mock_IfxGtm_Pwm_getChannelState_getCallCount'? [-Wimplicit-function-declaration]
  150 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Pwm_startChannelOutputs_getCallCount(), "init() must not call startChannelOutputs()");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:150:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  150 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Pwm_startChannelOutputs_getCallCount(), "init() must not call startChannelOutputs()");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:151:41: error: implicit declaration of function 'mock_IfxGtm_Pwm_stopChannelOutputs_getCallCount'; did you mean 'mock_IfxGtm_Pwm_getChannelState_getCallCount'? [-Wimplicit-function-declaration]
  151 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Pwm_stopChannelOutputs_getCallCount(), "init() must not call stopChannelOutputs()");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\Downloads\merge\infineon_POC_MVP\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_p8weut6b\test\test_gtm_tom_3_phase_inverter_pwm.c:151:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  151 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0, mock_IfxGtm_Pwm_stopChannelOutputs_getCallCount(), "init() must not call stopChannelOutputs()");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
